--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="UTF-8">
 		<title>Wollinger.io</title>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="css/style.css">
 		<link rel="icon" href="img/favicon.ico" type="image/x-icon" />
 	</head>
 
