--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
 							<span class="linkDivText">Discord</span>
 						</div>
 					</a>
+					<a class="link" href="javascript:mailButton()">
+						<div class="linkDiv">
+							<img class="linkDivImg" src="img/icons8/mail.png">
+							<span class="linkDivText">EMail</span>
+						</div>
+					</a>
 				</div>
 
 				<footer>
