Add themed icons

--- a/index.html
+++ b/index.html
@@ -17,31 +17,31 @@
 				<div id="links">
 					<a class="link" href="https://instagram.com/SvenWollinger" target="_blank">
 						<div class="linkDiv">
-							<img class="linkDivImg" src="img/icons8/instagram.svg">
+							<img class="linkDivImg icon-instagram">
 							<span class="linkDivText">Instagram</span>
 						</div>
 					</a>
 					<a class="link" href="https://twitter.com/SvenWollinger" target="_blank">
 						<div class="linkDiv">
-							<img class="linkDivImg" src="img/icons8/twitter.png">
+							<img class="linkDivImg icon-twitter">
 							<span class="linkDivText">Twitter</span>
 						</div>
 					</a>
 					<a class="link" href="https://github.com/SvenWollinger" target="_blank">
 						<div class="linkDiv">
-							<img class="linkDivImg" src="img/icons8/github.svg">
+							<img class="linkDivImg icon-github">
 							<span class="linkDivText">GitHub</span>
 						</div>
 					</a>
 					<a class="link" href="javascript:discordButton()">
 						<div class="linkDiv">
-							<img class="linkDivImg" src="img/icons8/discord.svg">
+							<img class="linkDivImg icon-discord">
 							<span class="linkDivText">Discord</span>
 						</div>
 					</a>
 					<a class="link" href="javascript:mailButton()">
 						<div class="linkDiv">
-							<img class="linkDivImg" src="img/icons8/mail.png">
+							<img class="linkDivImg icon-mail">
 							<span class="linkDivText">EMail</span>
 						</div>
 					</a>
