--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
 					</a>
 				</div>
 
-				<footer>
-					We like it minimal. </footer>
+				<footer>Based on <a href="https://github.com/MichaelBarney/LinkFree/tree/master/Templates/mnmlsm" target="_blank">LinkFree</a> | Icons by <a href="https://icons8.de" target="_blank">Icons8</a> | <a href="https://github.com/SvenWollinger/wollinger.io" target="_blank">Source Code</a></footer>
 			</div>
 		</div>
 	</body>
