--- a/index.html
+++ b/index.html
@@ -17,32 +17,32 @@
 				<div id="links">
 					<a class="link" href="https://instagram.com/SvenWollinger" target="_blank">
 						<div class="linkDiv">
-							<img class="linkDivImg icon-instagram">
-							<span class="linkDivText">Instagram</span>
+							<img class="icon-instagram">
+							<span>Instagram</span>
 						</div>
 					</a>
 					<a class="link" href="https://twitter.com/SvenWollinger" target="_blank">
 						<div class="linkDiv">
-							<img class="linkDivImg icon-twitter">
-							<span class="linkDivText">Twitter</span>
+							<img class="icon-twitter">
+							<span>Twitter</span>
 						</div>
 					</a>
 					<a class="link" href="https://github.com/SvenWollinger" target="_blank">
 						<div class="linkDiv">
-							<img class="linkDivImg icon-github">
-							<span class="linkDivText">GitHub</span>
+							<img class="icon-github">
+							<span>GitHub</span>
 						</div>
 					</a>
 					<a class="link" href="javascript:discordButton()">
 						<div class="linkDiv">
-							<img class="linkDivImg icon-discord">
-							<span class="linkDivText">Discord</span>
+							<img class="icon-discord">
+							<span>Discord</span>
 						</div>
 					</a>
 					<a class="link" href="javascript:mailButton()">
 						<div class="linkDiv">
-							<img class="linkDivImg icon-mail">
-							<span class="linkDivText">EMail</span>
+							<img class="icon-mail">
+							<span>EMail</span>
 						</div>
 					</a>
 				</div>
