--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="UTF-8">
-		<title>Wollinger.io</title>
+		<title id="title">Wollinger.io</title>
 		<link rel="stylesheet" href="css/style.css">
-		<link rel="icon" href="img/favicon.ico" type="image/x-icon" />
+		<link rel="icon" href="img/favicon.png"/>
 	</head>
 
 	<body>
@@ -76,5 +76,41 @@
 				console.error('Async: Could not copy text: ', err);
 			});
 		}
+		
+		var title = document.getElementById("title");
+		var titleOriginal = title.innerHTML;
+		
+		var ratsSongId;
+		var ratsSongIndex = 0;
+		var ratsSong = [
+			"Rats, rats, we are the Rats!",
+			"Celebrating yet another birthday bash!",
+			"Michael!",
+			"It's your birthday today!",
+			"Cake and ice cream is on its way!",
+			"And Michael...",
+			"you're such a good boy this year!",
+			"Open up your gifts, while we all cheer!"			
+		];
+		
+		function focus() {
+			title.innerHTML = titleOriginal;
+			clearInterval(ratsSongId);
+		}
+		
+		function blur() {
+			ratsSongIndex = 0;
+			ratsSongId = setInterval(function() {
+				title.innerHTML = ratsSong[ratsSongIndex];
+				if(ratsSongIndex >= ratsSong.length - 1) {
+					ratsSongIndex = 0;
+				} else {
+					ratsSongIndex++;
+				}
+			}, 1500);
+		}
+		
+		window.onblur = blur;
+		window.onfocus = focus;
 	</script>
 </html>
