Change image secret to onclick

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 	<body>
 		<div class="container">
 			<div class="content">
-				<a href="javascript:rotateImage()" rel="noopener">
-					<img class="spin360" id="userPhoto" src="img/avatar.png" alt="User Photo">
-				</a>
+				<img class="spin360" id="userPhoto" src="img/avatar.png" onclick="rotateImage()">
 				
 				<h1 id="userName">@SvenWollinger</h1>
 				<div id="links">
