Add about text & new margin for image

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 				<img class="spin360" id="userPhoto" src="img/avatar.png" onclick="rotateImage()">
 				
 				<h1 id="userName">@SvenWollinger</h1>
+				<p id="about">22 he/him 🇩🇪</p>
 				<div id="links">
 					<a class="link" href="https://github.com/SvenWollinger" target="_blank">
 						<div class="linkDiv">
