Testing new buttons

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 				
 				<h1 id="userName">@SvenWollinger</h1>
 				<p id="about">22 he/him 🇩🇪</p>
+				<div style="width:25%;">
+					<a href="#" class="navButton"><img class="icon-f-email"></a>
+					<a href="#" class="navButton"><img class="icon-f-puzzle"></a>
+					<a href="#" class="navButton"><img class="icon-f-heart"></a>
+					<a href="#" class="navButton"><img class="icon-f-animal"></a>
+				</div>
 				<div id="links">
 					<a class="link" href="https://github.com/SvenWollinger" target="_blank">
 						<div class="linkDiv">
