--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 				<h1 id="userName">@SvenWollinger</h1>
 				<p id="about">22 he/him 🇩🇪</p>
 				<div style="width:25%;">
-					<a href="#" class="navButton"><img class="icon-f-email"></a>
-					<a href="#" class="navButton"><img class="icon-f-puzzle"></a>
-					<a href="#" class="navButton"><img class="icon-f-heart"></a>
-					<a href="#" class="navButton"><img class="icon-f-animal"></a>
+						<div id="navContact" class="navButton selected" onclick="navClick('contact')"><img class="icon-f-email"></div>
+						<div id="navProjects" class="navButton" onclick="navClick('projects')"><img class="icon-f-puzzle"></div>
+						<div id="navHobbys" class="navButton" onclick="navClick('hobbys')"><img class="icon-f-heart"></div>
+						<div id="navPets" class="navButton" onclick="navClick('pets')"><img class="icon-f-animal"></div>
 				</div>
 				<div id="links">
 					<a class="link" href="https://github.com/SvenWollinger" target="_blank">
