--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<h1 id="userName">@SvenWollinger</h1>
 				<p id="about">22 he/him 🇩🇪</p>
 				<div style="width:25%;">
-						<div id="navContact" class="navButton selected" onclick="navClick('contact')"><img class="icon-f-email"></div>
+						<div id="navContact" class="navButton selected" onclick="navClick('contact')"><img class="icon-f-email selected"></div>
 						<div id="navProjects" class="navButton" onclick="navClick('projects')"><img class="icon-f-puzzle"></div>
 						<div id="navHobbys" class="navButton" onclick="navClick('hobbys')"><img class="icon-f-heart"></div>
 						<div id="navPets" class="navButton" onclick="navClick('pets')"><img class="icon-f-animal"></div>
