Fix issues with disabled nav buttons

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 				<div style="width:25%;">
 						<div id="navContact" class="navButton selected" onclick="navClick('contact')"><img class="icon-f-email selected"></div>
 						<div id="navProjects" class="navButton" onclick="navClick('projects')"><img class="icon-f-puzzle"></div>
-						<div id="navHobbys" class="navButton" onclick="navClick('hobbys')"><img class="icon-f-heart"></div>
-						<div id="navPets" class="navButton" onclick="navClick('pets')"><img class="icon-f-animal"></div>
+						<!--<div id="navHobbys" class="navButton" onclick="navClick('hobbys')"><img class="icon-f-heart"></div>-->
+						<!--<div id="navPets" class="navButton" onclick="navClick('pets')"><img class="icon-f-animal"></div>-->
 				</div>
 				<div id="links">
 					<a class="link" href="https://github.com/SvenWollinger" target="_blank">
