Replace png with .webp format

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 		<meta charset="UTF-8">
 		<title id="title">Wollinger.io</title>
 		<link rel="stylesheet" href="css/style.css">
-		<link rel="icon" href="img/favicon.png"/>
+		<link rel="icon" href="img/favicon.webp"/>
 	</head>
 
 	<body>
 		<div class="container">
 			<div class="content">
-				<img class="spin360" id="userPhoto" src="img/avatar.png" onclick="rotateImage()">
+				<img class="spin360" id="userPhoto" src="img/avatar.webp" onclick="rotateImage()">
 				
 				<h1 id="userName">@SvenWollinger</h1>
 				<p id="about">22 he/him 🇩🇪</p>
@@ -57,13 +57,13 @@
 					<div id="pageProjects" style="display:none;">
 						<a class="link" href="https://github.com/CaptureCoop/SnipSniper" target="_blank">
 							<div class="linkDiv">
-								<img src="/img/snipsniper.png">
+								<img src="/img/snipsniper.webp">
 								<span>SnipSniper</span>
 							</div>
 						</a>
 						<a class="link" href="https://github.com/SvenWollinger/HKManager" target="_blank">
 							<div class="linkDiv">
-								<img src="/img/hkmanager.png">
+								<img src="/img/hkmanager.webp">
 								<span>HKManager</span>
 							</div>
 						</a>
