--- a/index.html
+++ b/index.html
@@ -74,5 +74,7 @@
 			</div>
 		</div>
 	</body>
-	<script src="/js/main.js"></script> 
+	<script src="/js/utils.js"></script>
+	<script src="/js/main.js"></script>
+	<script src="/js/rats.js"></script> 
 </html>
