--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<div class="container">
 			<div class="content">
-				<img class="spin360" id="userPhoto" src="img/avatar.webp" onclick="rotateImage()">
+				<img class="spin360" id="userPhoto" src="img/avatar.webp" onclick="rotateUserPhoto()">
 				
 				<h1 id="userName">@SvenWollinger</h1>
 				<p id="about">22 he/him 🇩🇪</p>
