Add missing plugin projects

--- a/index.html
+++ b/index.html
@@ -94,6 +94,24 @@
 							</div>
 						</a>
 						<h3 class="projectTypeTitle">Minecraft Plugins</h3>
+						<a class="link" href="https://github.com/MischiefSMP/MischiefCore/" target="_blank">
+							<div class="linkDiv">
+								<img src="/img/minecraft.webp">
+								<span>MischiefCore</span>
+							</div>
+						</a>
+						<a class="link" href="https://github.com/MischiefSMP/MischiefStats/" target="_blank">
+							<div class="linkDiv">
+								<img src="/img/minecraft.webp">
+								<span>MischiefStats</span>
+							</div>
+						</a>
+						<a class="link" href="https://github.com/MischiefSMP/MischiefPerms/" target="_blank">
+							<div class="linkDiv">
+								<img src="/img/minecraft.webp">
+								<span>MischiefPerms</span>
+							</div>
+						</a>
 					</div>
 				</div>
 
