Add hobbys page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div style="width:50%;">
 						<div id="navContact" class="navButton selected" onclick="navClick('contact')"><img class="icon-f-email selected"></div>
 						<div id="navProjects" class="navButton" onclick="navClick('projects')"><img class="icon-f-puzzle"></div>
-						<!--<div id="navHobbys" class="navButton" onclick="navClick('hobbys')"><img class="icon-f-heart"></div>-->
+						<div id="navHobbys" class="navButton" onclick="navClick('hobbys')"><img class="icon-f-heart"></div>
 						<!--<div id="navPets" class="navButton" onclick="navClick('pets')"><img class="icon-f-animal"></div>-->
 				</div>
 				<div id="links">
@@ -112,6 +112,15 @@
 								<span>MischiefPerms</span>
 							</div>
 						</a>
+					</div>
+					<div id="pageHobbys" style="display:none;">
+						<div class="link">
+							<div class="linkDiv">
+								<img src="/img/rubiks.webp">
+								<span>3x3x3 Average: 45s</span>
+							</div>
+						</div>
+						<h4>Adding more soon.</h4>
 					</div>
 				</div>
 
