--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<img class="spin360" id="userPhoto" src="img/avatar.webp" onclick="rotateUserPhoto()">
 				
 				<h1 id="userName">@SvenWollinger</h1>
-				<p id="about">22 he/him 🇩🇪</p>
+				<p id="about">22 he/him 🇩🇪 <img class="panflag" src="img/panflag.svg"></p>
 				<div style="width:50%;">
 						<div id="navContact" class="navButton selected" onclick="navClick('contact')"><img class="icon-f-email selected"></div>
 						<div id="navProjects" class="navButton" onclick="navClick('projects')"><img class="icon-f-puzzle"></div>
