--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<div class="container">
 			<div class="content">
-				<img class="spin360" id="userPhoto" src="img/avatar.webp" onclick="rotateUserPhoto()">
+				<img class="spin360" id="userPhoto" src="" onclick="rotateUserPhoto()">
 				
 				<h1 id="userName">@SvenWollinger</h1>
 				<p id="about">23 any/all 🇩🇪 <img class="panflag" src="img/panflag.svg"></p>
