Replace Twitter with Bluesky

--- a/index.html
+++ b/index.html
@@ -41,10 +41,18 @@
 								<span>Instagram</span>
 							</div>
 						</a>
+						<!--
 						<a class="link" href="https://twitter.com/SvenWollinger" target="_blank">
 							<div class="linkDiv">
 								<img class="icon-twitter">
 								<span>Twitter</span>
+							</div>
+						</a>
+						-->
+						<a class="link" href="https://bsky.app/profile/svenwollinger.bsky.social" target="_blank">
+							<div class="linkDiv">
+								<img class="icon-bluesky">
+								<span>Bluesky</span>
 							</div>
 						</a>
 						<a class="link" href="javascript:discordButton()">
